--- a/templates/views/editor.hbs
+++ b/templates/views/editor.hbs
@@ -92,12 +92,16 @@
         </div>
     </div>
 </div> 
-content is: {{fred}} {{content}}
+<div id="app"></div>  
+<script type="text/javascript"
+        src="https://cdnjs.cloudflare.com/ajax/libs/react/0.13.3/react.min.js"></script>
 <script type="text/javascript"
         src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.js"></script>
 <script type="text/javascript"
         src="http://cdnjs.cloudflare.com/ajax/libs/lodash.js/2.4.1/lodash.js"></script>
 <script src="/js/editor/bundle-editor.js"></script>
+
+
 </body>
 </html>
 
