--- a/public/styles/editor.css
+++ b/public/styles/editor.css
@@ -15,19 +15,22 @@ html, body {
 .no-right-padding {
   padding-right: 0; }
 
-#formatting-container, #assett-container {
+#formatting-container, #asset-container {
   background-color: #f5f5f5;
   border-bottom: 1px solid #ccc;
   border-right: 1px solid #ccc;
   padding: 10px;
   height: 45px; }
-  #formatting-container #editor-left, #assett-container #editor-left {
+  #formatting-container #editor-left, #asset-container #editor-left {
     width: 50%;
     float: left; }
-  #formatting-container #editor-right, #assett-container #editor-right {
+  #formatting-container #editor-right, #asset-container #editor-right {
     width: 50%;
     float: left;
     text-align: right; }
+
+#asset-container {
+  text-align: center; }
 
 #editor-container {
   height: 100%;
