--- a/public/styles/editor.scss
+++ b/public/styles/editor.scss
@@ -1,7 +1,7 @@
 $color-bar-primary: #ccc;
 $color-bar-secondary: #ccc;
 $color-picker-label: #fbfbfb !important;
-$toolbar-height : 45px;
+$toolbar-height: 45px;
 
 html, body {
   height: 100%;
@@ -17,31 +17,36 @@ html, body {
   height: 90%;
 }
 
-.no-left-padding{
-  padding-left:0;
+.no-left-padding {
+  padding-left: 0;
 }
 
-.no-right-padding{
-  padding-right:0;
-} 
+.no-right-padding {
+  padding-right: 0;
+}
 
-#formatting-container, #assett-container {
+
+#formatting-container, #asset-container {
   background-color: #f5f5f5;
   border-bottom: 1px solid $color-bar-secondary;
   border-right: 1px solid $color-bar-secondary;
   padding: 10px;
   height: $toolbar-height;
 
-  #editor-left { 
+  #editor-left {
 	width: 50%;
 	float: left;
   }
-  
-  #editor-right { 
+
+  #editor-right {
 	width: 50%;
 	float: left;
 	text-align: right;
   }
+}
+
+#asset-container {
+  text-align: center;
 }
 
 #editor-container {
