--- a/templates/views/editor.hbs
+++ b/templates/views/editor.hbs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Quill Pretty Editor Demo</title>
+    <title>{{data.title}}</title>
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="/styles/quill.base.css">
     <link rel="stylesheet" type="text/css" href="/styles/quill.snow.css">
@@ -9,99 +9,27 @@
     <meta charset="utf-8">
 </head>
 <body>
-<script>
-	var content = "{{content}}";
-	// alert(JSON.parse({{content}}))
-</script>
 <div class="container-fluid">
     <div class="row">
         <div class="col-md-10 no-right-padding">
             <div id="content-container">
-                <div id="editor-wrapper">
-                    <div id="formatting-container" class="clearfix">
-                        <div id="editor-left">
-                            <select title="Font" class="ql-font">
-                                <option value="sans-serif" selected="">Sans Serif</option>
-                                <option value="serif">Serif</option>
-                                <option value="monospace">Monospace</option>
-                            </select>
-                            <span class="ql-format-separator"></span>
-                            <select class="ql-size">
-                                <option value="10px">Small</option>
-                                <option value="13px" selected>Normal</option>
-                                <option value="18px">Large</option>
-                                <option value="32px">Huge</option>
-                            </select>
-                            <span class="ql-format-separator"></span>
-                            <select title="Text Color" class="ql-color">
-                                <option value="rgb(0, 0, 0)" label="rgb(0, 0, 0)" selected=""></option>
-                                <option value="rgb(230, 0, 0)" label="rgb(230, 0, 0)"></option>
-                                <option value="rgb(255, 153, 0)" label="rgb(255, 153, 0)"></option>
-                                <option value="rgb(255, 255, 0)" label="rgb(255, 255, 0)"></option>
-                                <option value="rgb(0, 138, 0)" label="rgb(0, 138, 0)"></option>
-                                <option value="rgb(0, 102, 204)" label="rgb(0, 102, 204)"></option>
-                                <option value="rgb(153, 51, 255)" label="rgb(153, 51, 255)"></option>
-                                <option value="rgb(255, 255, 255)" label="rgb(255, 255, 255)"></option>
-                                <option value="rgb(250, 204, 204)" label="rgb(250, 204, 204)"></option>
-                                <option value="rgb(255, 235, 204)" label="rgb(255, 235, 204)"></option>
-                                <option value="rgb(255, 255, 204)" label="rgb(255, 255, 204)"></option>
-                                <option value="rgb(204, 232, 204)" label="rgb(204, 232, 204)"></option>
-                                <option value="rgb(204, 224, 245)" label="rgb(204, 224, 245)"></option>
-                                <option value="rgb(235, 214, 255)" label="rgb(235, 214, 255)"></option>
-                                <option value="rgb(187, 187, 187)" label="rgb(187, 187, 187)"></option>
-                                <option value="rgb(240, 102, 102)" label="rgb(240, 102, 102)"></option>
-                                <option value="rgb(255, 194, 102)" label="rgb(255, 194, 102)"></option>
-                                <option value="rgb(255, 255, 102)" label="rgb(255, 255, 102)"></option>
-                                <option value="rgb(102, 185, 102)" label="rgb(102, 185, 102)"></option>
-                                <option value="rgb(102, 163, 224)" label="rgb(102, 163, 224)"></option>
-                                <option value="rgb(194, 133, 255)" label="rgb(194, 133, 255)"></option>
-                                <option value="rgb(136, 136, 136)" label="rgb(136, 136, 136)"></option>
-                                <option value="rgb(161, 0, 0)" label="rgb(161, 0, 0)"></option>
-                                <option value="rgb(178, 107, 0)" label="rgb(178, 107, 0)"></option>
-                                <option value="rgb(178, 178, 0)" label="rgb(178, 178, 0)"></option>
-                                <option value="rgb(0, 97, 0)" label="rgb(0, 97, 0)"></option>
-                                <option value="rgb(0, 71, 178)" label="rgb(0, 71, 178)"></option>
-                                <option value="rgb(107, 36, 178)" label="rgb(107, 36, 178)"></option>
-                                <option value="rgb(68, 68, 68)" label="rgb(68, 68, 68)"></option>
-                                <option value="rgb(92, 0, 0)" label="rgb(92, 0, 0)"></option>
-                                <option value="rgb(102, 61, 0)" label="rgb(102, 61, 0)"></option>
-                                <option value="rgb(102, 102, 0)" label="rgb(102, 102, 0)"></option>
-                                <option value="rgb(0, 55, 0)" label="rgb(0, 55, 0)"></option>
-                                <option value="rgb(0, 41, 102)" label="rgb(0, 41, 102)"></option>
-                                <option value="rgb(61, 20, 102)" label="rgb(61, 20, 102)"></option>
-                            </select>
-                            <span class="ql-format-separator"></span>
-                            <span title="Bold" class="ql-format-button ql-bold"></span>
-                            <span class="ql-format-separator"></span>
-                            <span title="Italic" class="ql-format-button ql-italic"></span>
-                            <span class="ql-format-separator"></span>
-                            <span title="Underline" class="ql-format-button ql-underline"></span>
-                            <span class="ql-format-separator"></span>
-                            <span title="Strikethrough" class="ql-format-button ql-strike"></span>
-                        </div>
-                        <div id="editor-right"><a href="#" id="save">Save</a> | <a href="#" id="close">Close</a></div>
-                    </div>
-                    <div id="editor-container">
-                        <div><span style="font-size:18px;">Chapter N: Title to come from the books outline</span></div>
-                    </div>
-                </div>
+                <!-- React: editor mount point -->
+                <div id="editor"></div>
             </div>
         </div>
         <div class="col-md-2 no-left-padding">
-            <div id="assett-container">Assetts</div>
+            <div id="asset-container">Assets</div>
         </div>
     </div>
-</div> 
-<div id="app"></div>  
+</div>
 <script type="text/javascript"
-        src="https://cdnjs.cloudflare.com/ajax/libs/react/0.13.3/react.min.js"></script>
+        src="https://cdnjs.cloudflare.com/ajax/libs/react/0.13.3/react.js"></script>
 <script type="text/javascript"
         src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.js"></script>
 <script type="text/javascript"
         src="http://cdnjs.cloudflare.com/ajax/libs/lodash.js/2.4.1/lodash.js"></script>
+<!--todo: bundle above also-->
 <script src="/js/editor/bundle-editor.js"></script>
-
-
 </body>
 </html>
 
