started work on assets component

--- a/templates/views/editor.hbs
+++ b/templates/views/editor.hbs
@@ -10,15 +10,16 @@
 </head>
 <body>
 <div class="container-fluid">
-    <div class="row">
+    <div class="row container-fluid-row">
         <div class="col-md-10 no-right-padding">
             <div id="content-container">
-                <!-- React: editor mount point -->
-                <div id="editor"></div>
+                <!-- React mount point -->
+                <div id="editorMount"></div>
             </div>
         </div>
         <div class="col-md-2 no-left-padding">
-            <div id="asset-container">Assets</div>
+            <!-- React mount point -->
+            <div id="assetsMount"></div>
         </div>
     </div>
 </div>
