--- a/public/styles/editor.css
+++ b/public/styles/editor.css
@@ -2,7 +2,13 @@ html, body {
   height: 100%; }
 
 .container-fluid {
-  padding: 0; }
+  padding: 0;
+  margin: 0;
+  height: 100%;
+  overflow-x: hidden; }
+
+.container-fluid-row {
+  height: 100%; }
 
 #content-container {
   margin: auto;
@@ -10,31 +16,41 @@ html, body {
   height: 90%; }
 
 .no-left-padding {
-  padding-left: 0; }
+  padding-left: 0;
+  height: 100%;
+  border-left: 1px solid #ccc; }
 
 .no-right-padding {
   padding-right: 0; }
 
-#formatting-container, #asset-container {
+#formatting-container, #asset-header {
   background-color: #f5f5f5;
   border-bottom: 1px solid #ccc;
-  border-right: 1px solid #ccc;
   padding: 10px;
   height: 45px; }
-  #formatting-container #editor-left, #asset-container #editor-left {
+  #formatting-container #editor-toolbar-left, #asset-header #editor-toolbar-left {
     width: 50%;
+    height: 100%;
     float: left; }
-  #formatting-container #editor-right, #asset-container #editor-right {
+  #formatting-container #editor-toolbar-right, #asset-header #editor-toolbar-right {
     width: 50%;
+    height: 100%;
     float: left;
     text-align: right; }
 
-#asset-container {
+.chapter-preview-thumb {
+  width: 90%;
+  height: 120px;
+  margin: 10px auto auto auto;
+  padding: 10px;
+  background-color: #f5f5f5;
   text-align: center; }
 
 #editor-container {
-  height: 100%;
-  padding-top: 25px; }
+  min-height: 300px;
+  padding-top: 25px;
+  overflow: hidden;
+  height: 100%; }
 
 #editor-wrapper {
   height: 100%; }
