--- a/public/styles/editor.scss
+++ b/public/styles/editor.scss
@@ -9,7 +9,15 @@ html, body {
 
 .container-fluid {
   padding: 0;
+  margin: 0;
+  height: 100%;
+  overflow-x: hidden;
 }
+
+.container-fluid-row {
+  height:100%;
+}
+
 
 #content-container {
   margin: auto;
@@ -18,42 +26,56 @@ html, body {
 }
 
 .no-left-padding {
-  padding-left: 0;
-}
+  padding-left: 0;height:100%;
+  border-left: 1px solid $color-bar-secondary;
+} 
 
 .no-right-padding {
-  padding-right: 0;
+  padding-right: 0; 
 }
 
+// ------------------ editor toolbar --------------------/
 
-#formatting-container, #asset-container {
+#formatting-container, #asset-header {
   background-color: #f5f5f5;
   border-bottom: 1px solid $color-bar-secondary;
-  border-right: 1px solid $color-bar-secondary;
   padding: 10px;
   height: $toolbar-height;
 
-  #editor-left {
+  
+  
+  #editor-toolbar-left {
 	width: 50%;
+	height:100%;
 	float: left;
   }
 
-  #editor-right {
+  #editor-toolbar-right {
 	width: 50%;
+	height:100%;
 	float: left;
 	text-align: right;
   }
 }
 
-#asset-container {
+// -------------------------------------------------------/
+
+.chapter-preview-thumb {
+  width: 90%;
+  height: 120px;
+  margin: 10px auto auto auto;
+  padding: 10px;
+  background-color: #f5f5f5;
   text-align: center;
 }
 
 #editor-container {
-  height: 100%;
+  min-height: 300px;
   // start text a bit lower 
   // down, away from the toolbar
   padding-top: 25px;
+  overflow: hidden;
+  height:100%;
 }
 
 #editor-wrapper {
