progress on assets component

--- a/templates/views/editor.hbs
+++ b/templates/views/editor.hbs
@@ -26,9 +26,10 @@
 <script type="text/javascript"
         src="https://cdnjs.cloudflare.com/ajax/libs/react/0.13.3/react.js"></script>
 <script type="text/javascript"
-        src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.js"></script>
+        src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.js"></script>
 <script type="text/javascript"
         src="http://cdnjs.cloudflare.com/ajax/libs/lodash.js/2.4.1/lodash.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 <!--todo: bundle above also-->
 <script src="/js/editor/bundle-editor.js"></script>
 </body>
