--- a/public/styles/editor.css
+++ b/public/styles/editor.css
@@ -37,14 +37,24 @@ html, body {
     height: 100%;
     float: left;
     text-align: right; }
+  #formatting-container .nav-tabs, #asset-header .nav-tabs {
+    border: solid 1px red; }
 
-.chapter-preview-thumb {
+.chapter-preview-thumb, .location-preview-thumb, .character-preview-thumb {
   width: 90%;
   height: 120px;
   margin: 10px auto auto auto;
   padding: 10px;
-  background-color: #f5f5f5;
   text-align: center; }
+
+.character-preview-thumb {
+  background-color: #f2b866; }
+
+.chapter-preview-thumb {
+  background-color: #f5f5f5; }
+
+.location-preview-thumb {
+  background-color: #fff6de; }
 
 #editor-container {
   min-height: 300px;
