--- a/public/styles/editor.scss
+++ b/public/styles/editor.scss
@@ -15,9 +15,8 @@ html, body {
 }
 
 .container-fluid-row {
-  height:100%;
+  height: 100%;
 }
-
 
 #content-container {
   margin: auto;
@@ -26,12 +25,13 @@ html, body {
 }
 
 .no-left-padding {
-  padding-left: 0;height:100%;
+  padding-left: 0;
+  height: 100%;
   border-left: 1px solid $color-bar-secondary;
-} 
+}
 
 .no-right-padding {
-  padding-right: 0; 
+  padding-right: 0;
 }
 
 // ------------------ editor toolbar --------------------/
@@ -42,31 +42,44 @@ html, body {
   padding: 10px;
   height: $toolbar-height;
 
-  
-  
   #editor-toolbar-left {
 	width: 50%;
-	height:100%;
+	height: 100%;
 	float: left;
   }
 
   #editor-toolbar-right {
 	width: 50%;
-	height:100%;
+	height: 100%;
 	float: left;
 	text-align: right;
+  }
+
+  .nav-tabs {
+	border: solid 1px red;
   }
 }
 
 // -------------------------------------------------------/
 
-.chapter-preview-thumb {
+.chapter-preview-thumb, .location-preview-thumb, .character-preview-thumb {
   width: 90%;
   height: 120px;
   margin: 10px auto auto auto;
   padding: 10px;
-  background-color: #f5f5f5;
   text-align: center;
+}
+
+.character-preview-thumb {
+  background-color: #f2b866;
+}
+
+.chapter-preview-thumb {
+  background-color: #f5f5f5;
+}
+
+.location-preview-thumb {
+  background-color: #fff6de;
 }
 
 #editor-container {
@@ -75,7 +88,7 @@ html, body {
   // down, away from the toolbar
   padding-top: 25px;
   overflow: hidden;
-  height:100%;
+  height: 100%;
 }
 
 #editor-wrapper {
