--- a/public/styles/editor.css
+++ b/public/styles/editor.css
@@ -1,6 +1,9 @@
 html, body {
   height: 100%; }
 
+body {
+  background-color: #fff; }
+
 .container-fluid {
   padding: 0;
   margin: 0;
@@ -40,6 +43,23 @@ html, body {
   #formatting-container .nav-tabs, #asset-header .nav-tabs {
     border: solid 1px red; }
 
+.contrast1 {
+  background-color: #f8f8f8; }
+
+.contrast2 {
+  background-color: #e0e0e0; }
+
+.contrast3 {
+  background-color: #a0a0a0;
+  color: #f8f8f8; }
+
+.contrast4 {
+  background-color: #303030;
+  color: white; }
+
+.contrast5 {
+  background-color: #fff; }
+
 .chapter-preview-thumb, .location-preview-thumb, .character-preview-thumb {
   width: 90%;
   height: 120px;
@@ -52,6 +72,15 @@ html, body {
 
 .chapter-preview-thumb {
   background-color: #f5f5f5; }
+
+.contrast3 .chapter-preview-thumb {
+  background-color: red; }
+
+.contrast3 .location-preview-thumb {
+  background-color: red; }
+
+.contrast3 .character-preview-thumb {
+  background-color: red; }
 
 .location-preview-thumb {
   background-color: #fff6de; }
