--- a/public/styles/editor.scss
+++ b/public/styles/editor.scss
@@ -2,9 +2,14 @@ $color-bar-primary: #ccc;
 $color-bar-secondary: #ccc;
 $color-picker-label: #fbfbfb !important;
 $toolbar-height: 45px;
+$bg-color: #fff;
 
 html, body {
   height: 100%;
+}
+
+body {
+  background-color: $bg-color;
 }
 
 .container-fluid {
@@ -62,6 +67,32 @@ html, body {
 
 // -------------------------------------------------------/
 
+// ------------------ contrast levels --------------------/
+
+.contrast1 {
+  background-color: #f8f8f8;
+}
+
+.contrast2 {
+  background-color: #e0e0e0;
+}
+
+.contrast3 {
+  background-color: #a0a0a0;
+  color: #f8f8f8;
+}
+
+.contrast4 {
+  background-color: #303030;
+  color: white;
+}
+
+.contrast5 {
+  background-color: $bg-color;
+}
+
+// -------------------------------------------------------/
+
 .chapter-preview-thumb, .location-preview-thumb, .character-preview-thumb {
   width: 90%;
   height: 120px;
@@ -76,6 +107,19 @@ html, body {
 
 .chapter-preview-thumb {
   background-color: #f5f5f5;
+}
+
+// todo: contrast schemes for 1,2,4
+.contrast3 {
+  .chapter-preview-thumb {
+	background-color: red;
+  }
+  .location-preview-thumb {
+	background-color: red;
+  }
+  .character-preview-thumb {
+	background-color: red;
+  }
 }
 
 .location-preview-thumb {
