--- a/public/styles/editor.scss
+++ b/public/styles/editor.scss
@@ -61,8 +61,13 @@ body {
   }
 
   .nav-tabs {
-	border: solid 1px red;
+	border-bottom: none;
+
   }
+}
+
+#asset-header {
+  padding-top: 3px;
 }
 
 // -------------------------------------------------------/
@@ -70,28 +75,66 @@ body {
 // ------------------ contrast levels --------------------/
 
 .contrast1 {
-  background-color: #f8f8f8;
+  $contrast1-bgcolor: #f8f8f8;
+  background-color: $contrast1-bgcolor;
+  li.active a {
+	background-color: $contrast1-bgcolor;
+  }
 }
 
 .contrast2 {
-  background-color: #e0e0e0;
+  $contrast2-bgcolor: #e0e0e0;
+  background-color: $contrast2-bgcolor;
+  li.active a {
+	background-color: $contrast2-bgcolor;
+  }
 }
 
 .contrast3 {
-  background-color: #a0a0a0;
-  color: #f8f8f8;
+  $contrast3-bgcolor: #a0a0a0;
+  $contrast3-color: #f8f8f8; 
+  background-color: $contrast3-bgcolor;
+  li.active a {
+	background-color: $contrast3-bgcolor;
+	color: $contrast3-color;
+  }
+
+  .chapter-preview-thumb {
+	background-color: red;
+  }
+  .location-preview-thumb {
+	background-color: red;
+  }
+  .character-preview-thumb {
+	background-color: red;
+  }
 }
 
 .contrast4 {
-  background-color: #303030;
-  color: white;
+  $contrast4-bgcolor: #303030;
+  $contrast4-color: #fff;
+  background-color: $contrast4-bgcolor;
+  color: $contrast4-color;
+  li.active a {
+	background-color: $contrast4-bgcolor;
+	color: $contrast4-color;
+  }
 }
 
 .contrast5 {
   background-color: $bg-color;
+  li.active a {
+	background-color: $bg-color;
+  }
 }
 
 // -------------------------------------------------------/
+
+.tab-content { 
+  h3 {
+	text-align: center;
+  }
+}
 
 .chapter-preview-thumb, .location-preview-thumb, .character-preview-thumb {
   width: 90%;
@@ -107,19 +150,6 @@ body {
 
 .chapter-preview-thumb {
   background-color: #f5f5f5;
-}
-
-// todo: contrast schemes for 1,2,4
-.contrast3 {
-  .chapter-preview-thumb {
-	background-color: red;
-  }
-  .location-preview-thumb {
-	background-color: red;
-  }
-  .character-preview-thumb {
-	background-color: red;
-  }
 }
 
 .location-preview-thumb {
