--- a/public/styles/editor.css
+++ b/public/styles/editor.css
@@ -61,12 +61,8 @@ body {
   .contrast3 li.active a {
     background-color: #a0a0a0;
     color: #f8f8f8; }
-  .contrast3 .chapter-preview-thumb {
-    background-color: red; }
-  .contrast3 .location-preview-thumb {
-    background-color: red; }
-  .contrast3 .character-preview-thumb {
-    background-color: red; }
+  .contrast3 .no-left-padding {
+    border-left: 1px solid #bbb; }
 
 .contrast4 {
   background-color: #303030;
@@ -79,16 +75,30 @@ body {
   background-color: #fff; }
   .contrast5 li.active a {
     background-color: #fff; }
+  .contrast5 .no-left-padding {
+    border-left: 1px solid #ddd; }
 
 .tab-content h3 {
   text-align: center; }
 
-.chapter-preview-thumb, .location-preview-thumb, .character-preview-thumb {
-  width: 90%;
-  height: 120px;
+.asset-box, .new-asset, .chapter-preview-thumb, .location-preview-thumb, .character-preview-thumb {
   margin: 10px auto auto auto;
   padding: 10px;
+  width: 90%;
   text-align: center; }
+
+.new-asset {
+  height: 60px;
+  background-color: #ffd900; }
+  .new-asset .new-asset-title {
+    width: 50%;
+    float: left; }
+  .new-asset .new-asset-create {
+    width: 50%;
+    float: left; }
+
+.chapter-preview-thumb, .location-preview-thumb, .character-preview-thumb {
+  height: 120px; }
 
 .character-preview-thumb {
   background-color: #f2b866; }
