--- a/templates/views/editor.hbs
+++ b/templates/views/editor.hbs
@@ -14,6 +14,8 @@
         <div class="col-md-10 no-right-padding">
             <div id="content-container">
                 <!-- React mount point -->
+                <div id="editorToolbarMount"></div>
+                <!-- React mount point -->
                 <div id="editorMount"></div>
             </div>
         </div>
