--- a/public/styles/editor.css
+++ b/public/styles/editor.css
@@ -13,38 +13,34 @@ body {
 .container-fluid-row {
   height: 100%; }
 
-#content-container {
-  margin: auto;
-  width: 100%;
-  height: 100%; }
-
 .no-left-padding {
   padding-left: 0;
-  height: 100%;
-  border-left: 1px solid #ccc; }
+  height: 100%; }
 
 .no-right-padding {
   padding-right: 0; }
 
-#formatting-container, #asset-header {
+#editor-toolbar #formatting-container {
   background-color: #f5f5f5;
   border-bottom: 1px solid #ccc;
   padding: 10px;
   height: 45px; }
-  #formatting-container #editor-toolbar-left, #asset-header #editor-toolbar-left {
+  #editor-toolbar #formatting-container #editor-toolbar-left {
     width: 50%;
     height: 100%;
     float: left; }
-  #formatting-container #editor-toolbar-right, #asset-header #editor-toolbar-right {
+  #editor-toolbar #formatting-container #editor-toolbar-right {
     width: 50%;
     height: 100%;
     float: left;
     text-align: right; }
-  #formatting-container .nav-tabs, #asset-header .nav-tabs {
-    border-bottom: none; }
 
 #asset-header {
-  padding-top: 3px; }
+  background-color: #f5f5f5; }
+  #asset-header .nav-tabs {
+    padding-left: 10px;
+    padding-top: 3px;
+    border-bottom: 1px solid #ccc; }
 
 .contrast1 {
   background-color: #f8f8f8; }
@@ -78,8 +74,10 @@ body {
   .contrast5 .no-left-padding {
     border-left: 1px solid #ddd; }
 
-.tab-content h3 {
-  text-align: center; }
+.tab-content {
+  border-left: 1px solid #ccc; }
+  .tab-content h3 {
+    text-align: center; }
 
 .asset-box, .new-asset, .chapter-preview-thumb, .location-preview-thumb, .character-preview-thumb {
   margin: 10px auto auto auto;
@@ -109,9 +107,9 @@ body {
 .location-preview-thumb {
   background-color: #fff6de; }
 
-#editor-container {
+#quill {
   min-height: 300px;
-  padding-top: 25px;
+  padding: 80px 80px 125px 125px;
   overflow: hidden;
   height: 100%; }
 
