--- a/public/styles/editor.scss
+++ b/public/styles/editor.scss
@@ -67,10 +67,12 @@ body {
 
 #asset-header {
   background-color: $color-heading-strip;
+  //border-bottom: 1px solid $color-bar-secondary;
   .nav-tabs {
-	padding-left: 10px;
+	padding-left: 25%;//px;
 	padding-top: 3px;
-	border-bottom: 1px solid $color-bar-secondary;
+	//width: 75%;
+	//margin: auto;
   }
 
 }
@@ -104,7 +106,7 @@ body {
   }
 
   .no-left-padding {
-	border-left: 1px solid #bbb;
+	//border-left: 1px solid #bbb;
   }
 
   //.chapter-preview-thumb {
@@ -135,7 +137,7 @@ body {
 	background-color: $bg-color;
   }
   .no-left-padding {
-	border-left: 1px solid #ddd;
+	//border-left: 1px solid #ddd;
   }
 }
 
@@ -144,7 +146,7 @@ body {
 .tab-content {
   //todo: extend border to top? (remove padding/margin on asset content
   border-left: 1px solid $color-bar-secondary;
-
+  border-top: 1px solid transparent;
   h3 {
 	text-align: center;
   }
