--- a/public/styles/editor.css
+++ b/public/styles/editor.css
@@ -5,6 +5,8 @@ body {
   background-color: #fff; }
 
 .container-fluid {
+  position: relative;
+  top: 10px;
   padding: 0;
   margin: 0;
   height: 100%;
@@ -20,22 +22,36 @@ body {
 .no-right-padding {
   padding-right: 0; }
 
-#editor-toolbar #formatting-container {
-  background-color: #f5f5f5;
-  border-bottom: 1px solid #ccc;
-  padding: 10px;
-  height: 45px; }
-  #editor-toolbar #formatting-container #editor-toolbar-left {
-    width: 50%;
-    height: 100%;
-    float: left; }
-  #editor-toolbar #formatting-container #editor-toolbar-right {
-    width: 50%;
-    height: 100%;
-    float: left;
-    text-align: right; }
+#editor {
+  width: 80%;
+  height: 100%;
+  margin: auto;
+  margin-top: 60px;
+  background-color: #33acfe; }
+
+#editor-toolbar {
+  position: fixed;
+  z-index: 1010;
+  width: 75%; }
+  #editor-toolbar #formatting-container {
+    background-color: #f5f5f5;
+    border-bottom: 1px solid #ccc;
+    padding: 10px;
+    height: 45px; }
+    #editor-toolbar #formatting-container #editor-toolbar-left {
+      width: 50%;
+      height: 100%;
+      float: left; }
+    #editor-toolbar #formatting-container #editor-toolbar-right {
+      width: 50%;
+      height: 100%;
+      float: left;
+      text-align: right; }
 
 #asset-header {
+  position: fixed;
+  z-index: 1020;
+  width: 30%;
   background-color: #f5f5f5; }
   #asset-header .nav-tabs {
     padding-left: 25%;
@@ -82,6 +98,7 @@ body {
   text-align: center; }
 
 .new-asset {
+  margin-top: 60px;
   height: 60px;
   background-color: #ffd900; }
   .new-asset .new-asset-title {
