--- a/public/styles/editor.scss
+++ b/public/styles/editor.scss
@@ -58,7 +58,7 @@ html, body {
 	  border-bottom:1px solid $color-tab-border;
 	  li{
 		a{
-		  //@include border-radius(0);
+		  @include border-radius(0);
 		  //margin-top:3px;
 		}
 	  } 
