friday check in - css edits only

--- a/public/styles/editor.css
+++ b/public/styles/editor.css
@@ -5886,14 +5886,13 @@ html, body {
         -ms-border-radius: 0;
         border-radius: 0; }
 
-.nav-tabs > li > a {
-  border: 1px solid black; }
-
-.nav-tabs > li > a.active {
-  border-bottom-color: transparent; }
-
 .nav-tabs > li.active > a {
+  background-color: #C2D5F2;
+  border: 1px solid black;
   border-bottom-color: transparent; }
+
+.nav-tabs > li > a {
+  border-bottom: 1px solid black; }
 
 .container-main {
   padding-top: 62px;
