--- a/public/styles/editor.css
+++ b/public/styles/editor.css
@@ -5869,7 +5869,8 @@ html, body {
   top: 0;
   width: 100%;
   background-color: #eee;
-  color: #000; }
+  color: #000;
+  border-bottom: solid 1px #bbb; }
   .container-header .main-header-row {
     overflow: hidden; }
   .container-header .editor-tools-wrapper, .container-header .assets-nav-wrapper {
@@ -5878,19 +5879,9 @@ html, body {
   .container-header .assets-nav-wrapper {
     padding-left: 0;
     padding-right: 0; }
-    .container-header .assets-nav-wrapper .nav-tabs {
-      border-bottom: 1px solid black; }
-
-.nav-tabs > li.active > a {
-  background-color: #C2D5F2;
-  border: 1px solid black;
-  border-bottom-color: transparent; }
-
-.nav-tabs > li > a {
-  border-bottom: 1px solid black; }
 
 .container-main {
-  padding-top: 62px;
+  padding-top: 42px;
   width: 100%;
   height: 100%; }
   .container-main .row {
@@ -5903,4 +5894,7 @@ html, body {
     height: 100%;
     overflow: auto;
     background-color: #C2D5F2;
-    border-left: solid 1px black; }
+    border-left: solid 1px #bbb; }
+    .container-main .assets-wrapper .preview-thumb {
+      width: 90%;
+      border: solid 1px red; }
