--- a/public/styles/editor.scss
+++ b/public/styles/editor.scss
@@ -10,7 +10,7 @@ $color-editor-wrapper: #fafafa;
 $color-heading-strip: #f5f5f5;
 $color-picker-label: #fbfbfb !important;
 $color-active-tab-and-tab-contents: #C2D5F2;
-$color-tab-border:black;// #fbfbfb;
+$color-tab-border: #bbb;
 
 $toolbar-height: 42px;
 
@@ -36,7 +36,8 @@ html, body {
   width: 100%;
   background-color: $color-container-header-bg;
   color: $color-container-header;
-
+  border-bottom:solid 1px $color-tab-border;
+  
   .main-header-row { 
 	overflow: hidden;
   }
@@ -44,49 +45,16 @@ html, body {
   .editor-tools-wrapper, .assets-nav-wrapper {
 	height: $toolbar-height; 
 	background-color: $color-container-header-bg;
-  }
-
+  } 
+  
   .assets-nav-wrapper {
 	padding-left: 0;
-	padding-right: 0;
-	.nav {  
-	  //width:100%;
-	  //margin:auto;
-	} 
-	
-	.nav-tabs{
-	  border-bottom:1px solid $color-tab-border;
-	  li{
-		a{
-		  @include border-radius(0);
-		  //margin-top:3px;
-		}
-	  } 
-	}
+	padding-right: 0; 
   }
 }
-
-// ------!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
-// !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
-
-.nav-tabs > li.active > a{
-  background-color: $color-active-tab-and-tab-contents;
-  border: 1px solid $color-tab-border;
-  border-bottom-color: transparent;
-}
-
-.nav-tabs > li > a{
-  //background-color: $color-active-tab-and-tab-contents; 
-  border-bottom: 1px solid $color-tab-border;
-  //border-bottom-color: transparent;
-}
-
-//.nav-tabs > li.active > a:focus, .nav-tabs > li.active > a:hover {
-//  
-//}
-
+ 
 .container-main {
-  padding-top: 62px; // todo: 42
+  padding-top: 42px; // todo: 42
   width: 100%;
   height: 100%;
 
@@ -104,7 +72,11 @@ html, body {
 	height: 100%;
 	overflow: auto;
 	background-color: $color-active-tab-and-tab-contents;
-	border-left: solid 1px $color-tab-border;
-	//border-top: solid 1px $color-active-tab-border;
+	border-left: solid 1px $color-tab-border; 
+	
+	.preview-thumb{
+	  width:90%;
+	  border:solid 1px red;
+	}
   }
 }
