--- a/public/styles/editor.scss
+++ b/public/styles/editor.scss
@@ -6,22 +6,24 @@ $color-background: white;
 $color-container-header-bg: #eee;
 $color-container-header: #000;
 $color-bar-secondary: #ccc;
-$color-editor-wrapper: #fafafa;
+$color-editor-wrapper: #fff;
+$color-editor: darken($color-editor-wrapper, 3%);
 $color-heading-strip: #f5f5f5;
 $color-picker-label: #fbfbfb !important;
 $color-active-tab-and-tab-contents: #C2D5F2;
 $color-tab-border: #bbb;
-
 $toolbar-height: 42px;
 $gap-between-assets: 10px;
 $asset-box-height: 115px;
+$corner-radius: 4px;
+$editor-padding: 25px;
 
 // ------------------ mix-ins --------------------/ 
-@mixin border-radius($radius) {
-  -webkit-border-radius: $radius;
-  -moz-border-radius: $radius;
-  -ms-border-radius: $radius;
-  border-radius: $radius;
+@mixin border-radius-editor($radius) {
+  -webkit-border-radius: $radius $radius 0 0;
+  -moz-border-radius: $radius $radius 0 0;;
+  -ms-border-radius: $radius $radius 0 0;;
+  border-radius: $radius $radius 0 0;
 }
 
 // ------------------ variables --------------------/ 
@@ -39,9 +41,9 @@ html, body {
   background-color: $color-container-header-bg;
   color: $color-container-header;
   border-bottom: solid 1px $color-tab-border;
-
+  
   .main-header-row {
-	overflow: hidden;
+	overflow:visible;
   }
 
   .editor-tools-wrapper, .assets-nav-wrapper {
@@ -56,7 +58,7 @@ html, body {
 }
 
 .container-main {
-  padding-top: 42px; // todo: 42
+  padding-top: 42px;
   width: 100%;
   height: 100%;
 
@@ -68,6 +70,19 @@ html, body {
 	background-color: $color-editor-wrapper;
 	height: 100%;
 	overflow: auto;
+	padding: 0 0 0 $editor-padding; 
+	
+
+	.ql-container {
+	  padding: $editor-padding $editor-padding * 2 0 $editor-padding;
+
+	  .ql-editor {
+		background-color: $color-editor;
+		padding: $editor-padding * 3;
+		@include border-radius-editor($corner-radius);
+	  }
+	}
+
   }
 
   .assets-wrapper {
@@ -75,29 +90,29 @@ html, body {
 	overflow: auto;
 	background-color: $color-active-tab-and-tab-contents;
 	border-left: solid 1px $color-tab-border;
-	padding-top: $gap-between-assets; 
-	
+	padding-top: $gap-between-assets;
+
 	.preview-box-master {
 	  width: 90%;
 	  margin: auto auto $gap-between-assets;
-	  border: solid 1px red;
+	  border: solid 1px $color-editor;
 	}
 
-	.new-asset{ 
+	.new-asset {
 	  @extend .preview-box-master;
 	  height: $asset-box-height / 3;
 
 	  .new-asset-title {
-		width:50%;
+		width: 50%;
 		float: left;
 	  }
 
 	  .new-asset-create {
-		width:50%;
+		width: 50%;
 		float: left;
 	  }
 	}
-	 
+
 	.preview-thumb {
 	  @extend .preview-box-master;
 	  height: $asset-box-height;
