--- a/templates/views/editor.hbs
+++ b/templates/views/editor.hbs
@@ -23,16 +23,13 @@
     </div>
 </div>
 
-<div class="container-fluid container-main">
-
+<div class="container-fluid container-main"> 
     <div class="row">
         <div class="col-sm-9 editor-wrapper" id="editor">
         </div>
-        <div class="col-sm-3 assets-wrapper tab-content"> 
-            <div id="assets"></div>
+        <div class="col-sm-3 assets-wrapper tab-content" id="assets">  
         </div>
-    </div>
-
+    </div> 
 </div>
 <div>
 
