--- a/public/styles/editor.css
+++ b/public/styles/editor.css
@@ -5879,6 +5879,29 @@ html, body {
   .container-header .assets-nav-wrapper {
     padding-left: 0;
     padding-right: 0; }
+    .container-header .assets-nav-wrapper #assets-ddl-menu {
+      width: 100%; }
+      .container-header .assets-nav-wrapper #assets-ddl-menu .btn {
+        width: 100%;
+        height: 42px;
+        -webkit-border-radius: 0;
+        -moz-border-radius: 0;
+        -ms-border-radius: 0;
+        border-radius: 0;
+        border-right: 0;
+        border-bottom: 0;
+        border-top: 0; }
+    .container-header .assets-nav-wrapper #assets-ddl-menu ul {
+      width: 100%;
+      margin: auto;
+      -webkit-border-radius: 0;
+      -moz-border-radius: 0;
+      -ms-border-radius: 0;
+      border-radius: 0; }
+      .container-header .assets-nav-wrapper #assets-ddl-menu ul li {
+        width: 100%; }
+        .container-header .assets-nav-wrapper #assets-ddl-menu ul li a {
+          width: 100%; }
 
 .container-main {
   padding-top: 42px;
