--- a/templates/views/editor.hbs
+++ b/templates/views/editor.hbs
@@ -16,9 +16,24 @@
         <div class="col-sm-9 editor-tools-wrapper" id="editor-toolbar"> 
         </div>
         <div class="col-sm-3 assets-nav-wrapper">
-            <a href="#tabChapters" aria-controls="home" role="tab" data-toggle="tab">Chapters</a>
-            <a href="#tabChapters" aria-controls="home" role="tab" data-toggle="tab">Locations</a>
-            <a href="#tabCharacters" aria-controls="home" role="tab" data-toggle="tab">Characters</a>
+            <!--<a href="#tabChapters" aria-controls="home" role="tab" data-toggle="tab">Chapters</a>-->
+            <!--<a href="#tabChapters" aria-controls="home" role="tab" data-toggle="tab">Locations</a>-->
+            <!--<a href="#tabCharacters" aria-controls="home" role="tab" data-toggle="tab">Characters</a>-->
+
+            <div id="assets-ddl-menu" class="dropdown">
+                <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+                    Characters
+                    <span class="caret"></span>
+                </button>
+                <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
+                    <li><a href="#">Action</a></li>
+                    <li><a href="#">Another action</a></li>
+                    <li><a href="#">Something else here</a></li>
+                    <li><a href="#">Separated link</a></li>
+                </ul>
+            </div>
+			
+			
 		</div>
     </div>
 </div>
