--- a/public/styles/editor.css
+++ b/public/styles/editor.css
@@ -5868,14 +5868,14 @@ html, body {
   z-index: 1000;
   top: 0;
   width: 100%;
-  background-color: #eee;
+  background-color: #fcfcfc;
   color: #000;
   border-bottom: solid 1px #bbb; }
   .container-header .main-header-row {
     overflow: visible; }
   .container-header .editor-tools-wrapper, .container-header .assets-nav-wrapper {
     height: 42px;
-    background-color: #eee; }
+    background-color: #fcfcfc; }
   .container-header .assets-nav-wrapper {
     padding-left: 0;
     padding-right: 0; }
@@ -5884,6 +5884,7 @@ html, body {
       .container-header .assets-nav-wrapper #assets-ddl-menu .btn {
         width: 100%;
         height: 42px;
+        background-color: #fcfcfc;
         -webkit-border-radius: 0;
         -moz-border-radius: 0;
         -ms-border-radius: 0;
@@ -5910,14 +5911,14 @@ html, body {
   .container-main .row {
     height: 100%; }
   .container-main .editor-wrapper {
-    background-color: #fff;
+    background-color: #eee;
     height: 100%;
     overflow: auto;
     padding: 0 0 0 25px; }
     .container-main .editor-wrapper .ql-container {
       padding: 25px 50px 0 25px; }
       .container-main .editor-wrapper .ql-container .ql-editor {
-        background-color: #f7f7f7;
+        background-color: white;
         padding: 75px;
         -webkit-border-radius: 4px 4px 0 0;
         -moz-border-radius: 4px 4px 0 0;
@@ -5926,13 +5927,14 @@ html, body {
   .container-main .assets-wrapper {
     height: 100%;
     overflow: auto;
-    background-color: #C2D5F2;
+    background-color: #eee;
     border-left: solid 1px #bbb;
     padding-top: 10px; }
     .container-main .assets-wrapper .preview-box-master, .container-main .assets-wrapper .new-asset, .container-main .assets-wrapper .preview-thumb {
-      width: 90%;
-      margin: auto auto 10px;
-      border: solid 1px #f7f7f7; }
+      width: 100%;
+      padding: 6px;
+      background-color: #C2D5F2;
+      margin: auto auto 10px; }
     .container-main .assets-wrapper .new-asset {
       height: 38.33333px; }
       .container-main .assets-wrapper .new-asset .new-asset-title {
