--- a/templates/views/editor.hbs
+++ b/templates/views/editor.hbs
@@ -13,41 +13,23 @@
 <div class="container-fluid container-header">
 
     <div class="row main-header-row">
-        <div class="col-sm-9 editor-tools-wrapper" id="editor-toolbar"> 
+        <div class="col-sm-9 editor-tools-wrapper" id="editor-toolbar">
         </div>
         <div class="col-sm-3 assets-nav-wrapper">
-            <!--<a href="#tabChapters" aria-controls="home" role="tab" data-toggle="tab">Chapters</a>-->
-            <!--<a href="#tabChapters" aria-controls="home" role="tab" data-toggle="tab">Locations</a>-->
-            <!--<a href="#tabCharacters" aria-controls="home" role="tab" data-toggle="tab">Characters</a>-->
-
-            <div id="assets-ddl-menu" class="dropdown">
-                <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-                    Characters
-                    <span class="caret"></span>
-                </button>
-                <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
-                    <li><a href="#">Action</a></li>
-                    <li><a href="#">Another action</a></li>
-                    <li><a href="#">Something else here</a></li>
-                    <li><a href="#">Separated link</a></li>
-                </ul>
-            </div>
-			
-			
-		</div>
+            <div id="assets-menu"></div>
+        </div>
     </div>
 </div>
 
-<div class="container-fluid container-main"> 
+<div class="container-fluid container-main">
     <div class="row">
         <div class="col-sm-9 editor-wrapper" id="editor">
         </div>
-        <div class="col-sm-3 assets-wrapper tab-content" id="assets">  
+        <div class="col-sm-3 assets-wrapper tab-content" id="assets">
         </div>
-    </div> 
+    </div>
 </div>
 <div>
-
 
 </div>
 <script type="text/javascript"
